mesa (20.2.0~rc2-1) UNRELEASED; urgency=medium

  * New upstream release candidate.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 13 Aug 2020 14:35:26 +0300

mesa (20.1.5-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 10 Aug 2020 10:32:11 +0300

mesa (20.1.4-1) unstable; urgency=medium

  * New upstream release.
  * fix-ppc64el.patch: Dropped, upstream.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 28 Jul 2020 15:59:19 +0300

mesa (20.1.2-1) unstable; urgency=medium

  * New upstream release. (Closes: #963677)
  * mesa-vulkan-drivers: Add support for device-select-layer.
  * control, rules: Enable valgrind where supported. (Closes: #890846)

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Jun 2020 10:24:29 +0300

mesa (20.1.1-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 11 Jun 2020 11:06:50 +0300

mesa (20.1.0-1) experimental; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 28 May 2020 13:14:52 +0300

mesa (20.1.0~rc4-1) experimental; urgency=medium

  * New upstream snapshot.
  * fix-build-with-llvm-10.diff: Dropped, upstream.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 22 May 2020 09:17:06 +0300

mesa (20.1.0~rc1-1) experimental; urgency=medium

  * New upstream snapshot.
  * fix-build-with-llvm-10.diff: Refreshed.
  * signing-key: Add key from Eric Engeström.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 05 May 2020 12:47:17 +0300

mesa (20.0.7-1) unstable; urgency=medium

  * New upstream release.
  * src_glx_dri_common.h.diff: A new attempt to fix hurd ftbfs. (Closes:
    #960197)

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 22 May 2020 08:36:18 +0300

mesa (20.0.6-3) unstable; urgency=medium

  * src_glx_dri_common.h.diff: Dropped, breaks the build.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 08 May 2020 12:44:12 +0300

mesa (20.0.6-2) unstable; urgency=medium

  [ Timo Aaltonen ]