@@ -35,38 +35,38 @@ confflags_DRI3 = -Ddri3=false
 
 # hurd doesn't do direct rendering
 ifeq ($(DEB_HOST_ARCH_OS), hurd)
-	DRI_DRIVERS = swrast,
+	DRI_DRIVERS = swrast
 	EGL_PLATFORMS = x11
 
 	confflags_DIRECT_RENDERING = -Dglx-direct=false
 	confflags_GBM = -Dgbm=false
 	confflags_OSMESA = -Dosmesa=classic
 else
-	DRI_DRIVERS += r200, r100,
+	DRI_DRIVERS += r200,r100
 	EGL_PLATFORMS = drm,surfaceless,x11
-	GALLIUM_DRIVERS += r600, r300,
+	GALLIUM_DRIVERS += r600,r300
 
   ifeq ($(DEB_HOST_ARCH_OS), linux)
 	confflags_DRI3 = -Ddri3=true
-	DRI_DRIVERS += nouveau,
+	DRI_DRIVERS += ,nouveau
 	# Gallium drivers which require kernel support, not yet ported to non-Linux
-	GALLIUM_DRIVERS += nouveau, virgl,
+	GALLIUM_DRIVERS += ,nouveau,virgl
 
 	# Freedreno requires arm in addition
 	ifneq (,$(filter arm arm64,$(DEB_HOST_ARCH_CPU)))
-		GALLIUM_DRIVERS += freedreno,
+		GALLIUM_DRIVERS += ,freedreno
 	endif
 
 	# etnaviv, kmsro, tegra, vc4 and v3d kernel support are only available on armhf and arm64
 	ifneq (,$(filter $(DEB_HOST_ARCH), armhf arm64))
-		GALLIUM_DRIVERS += etnaviv, kmsro, lima, panfrost, tegra, vc4, v3d,
+		GALLIUM_DRIVERS += ,etnaviv,kmsro,lima,panfrost,tegra,vc4,v3d
 	endif
 
 	ifneq (,$(filter $(DEB_HOST_ARCH), amd64 i386 x32))
-		GALLIUM_DRIVERS += svga,zink,
+		GALLIUM_DRIVERS += ,svga,zink
 		# svga needs xa state tracker
 		confflags_GALLIUM += -Dgallium-xa=true
-		VULKAN_DRIVERS += intel,
+		VULKAN_DRIVERS += intel
 	endif
 
 	# Non-Linux ports also lack *_CLOEXEC and epoll, so wayland isn't ready yet:
@@ -79,14 +79,14 @@ else
 
   # Build intel drivers on archs where libdrm-intel is installed
   ifneq (,$(filter $(DEB_HOST_ARCH),amd64 i386 kfreebsd-amd64 kfreebsd-i386 x32))
-	DRI_DRIVERS += i915, i965,
-	GALLIUM_DRIVERS += iris,
+	DRI_DRIVERS += ,i915, i965
+	GALLIUM_DRIVERS += ,iris
   endif
 
   # LLVM is required for building r300g, radeonsi and llvmpipe drivers.
   # It's also required for building OpenCL support.
   ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 kfreebsd-amd64 kfreebsd-i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64))
-	GALLIUM_DRIVERS += radeonsi, swrast,
+	GALLIUM_DRIVERS += ,radeonsi,swrast
 	confflags_GALLIUM += -Dllvm=true
 	confflags_GALLIUM += -Dgallium-opencl=icd
 	confflags_OSMESA = -Dosmesa=gallium
@@ -96,7 +96,7 @@ else
 		confflags_GALLIUM += -Dgallium-nine=true
 	endif
   else
-	DRI_DRIVERS += swrast,
+	DRI_DRIVERS += ,swrast
 	confflags_GALLIUM += -Dllvm=false
 	confflags_OSMESA = -Dosmesa=classic
   endif
@@ -104,7 +104,7 @@ else
   # radv needs LLVM and the Vulkan loader, so only build on the subset of
   # arches where we have LLVM enabled and where the Vulkan loader is built.
   ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64))
-	VULKAN_DRIVERS += amd,
+	VULKAN_DRIVERS += ,amd
   endif
 
   # build vulkan layers where Vulkan loader is available
